Fix a lot of javascript issues Turn chevrons Add thread only visible when thread is open

--- a/Hackathon/resources/sass/app.scss
+++ b/Hackathon/resources/sass/app.scss
@@ -84,11 +84,6 @@ ul {
     margin-bottom: 10px;
 }
 
-
-.toggle {
-    color: black;
-}
-
 .hide {
     display: none;
 }
